--- a/Musique/musiques.yaml
+++ b/Musique/musiques.yaml
@@ -1,4 +1,9 @@
 musics:
+#################################################################################
+#################################################################################
+####                              ROCK (CLASSIQUE)                           ####
+#################################################################################
+#################################################################################
   - genre: Rock (Classique)
     artists:
       - name: Queen
@@ -48,6 +53,15 @@ musics:
           - title: Rocket Man
             youtube_link: https://www.youtube.com/watch?v=DtVBCG6ThDk
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                   ROCK                                  ####
+#################################################################################
+#################################################################################
   - genre: Rock
     artists:
       - name: Linkin Park
@@ -91,6 +105,15 @@ musics:
           - title: Army Of Stone
             youtube_link: https://www.youtube.com/watch?v=SFxKm8zxCeE
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                   METAL                                 ####
+#################################################################################
+#################################################################################
   - genre: Métal
     artists:
       - name: NightWish
@@ -142,6 +165,15 @@ musics:
           - title: Jesus He Knows Me (Genesis)
             youtube_link: https://www.youtube.com/watch?v=GBiKayMXLk0
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                    FR                                   ####
+#################################################################################
+#################################################################################
   - genre: Francophonie
     artists:
       - name: Johnny Hallyday
@@ -249,6 +281,15 @@ musics:
           - title: Ella, elle l'a
             youtube_link: https://www.youtube.com/watch?v=lgHGU8gqz9U
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                   POP                                   ####
+#################################################################################
+#################################################################################
   - genre: Pop
     artists:
       - name: Michael Jackson
@@ -372,6 +413,15 @@ musics:
           - title: (I Just) Died In Your Arms
             youtube_link: https://www.youtube.com/watch?v=6dOwHzCHfgA
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                    YT                                   ####
+#################################################################################
+#################################################################################
   - genre: Youtube
     artists:
       - name: Peter Hollens
@@ -468,6 +518,15 @@ musics:
           - title: Mon Ancètre Gurdil
             youtube_link: https://www.youtube.com/watch?v=3TAQViG36QA
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                  DISNEY                                 ####
+#################################################################################
+#################################################################################
   - genre: Disney
     artists:
       - name: Frozen 2
@@ -536,26 +595,16 @@ musics:
         songs:
           - title: Bella Ciao
             youtube_link: https://www.youtube.com/watch?v=XXidBV1H-H4
+            
 
-  - genre: Rap
-    artists:
-      - name: OrelSan
-        songs:
-          - title: La pluie (feat. Stromae)
-            youtube_link: https://www.youtube.com/watch?v=37StRy0LEbI
-      - name: Bigflo & Oli
-        songs:
-          - title: Bienvenue chez moi
-            youtube_link: https://www.youtube.com/watch?v=PTJLmBfG8yc
-      - name: Eminem
-        songs:
-          - title: Lose Yourself
-            youtube_link: https://www.youtube.com/watch?v=xFYQQPAOz7Y
-      - name: Tom MacDonalds
-        songs:
-          - title: Fake Woke
-            youtube_link: https://www.youtube.com/watch?v=2l6JUNFAJ9o
 
+
+
+#################################################################################
+#################################################################################
+####                                   FOLK                                  ####
+#################################################################################
+#################################################################################
   - genre: Folk
     artists:
       - name: Simon Fin Schütt
@@ -587,6 +636,43 @@ musics:
           - title: Oi u luzi chervona kalyna
             youtube_link: https://www.youtube.com/watch?v=LIUoFuSuvTM
 
+
+
+
+
+#################################################################################
+#################################################################################
+####                                   RAP                                   ####
+#################################################################################
+#################################################################################
+  - genre: Rap
+    artists:
+      - name: OrelSan
+        songs:
+          - title: La pluie (feat. Stromae)
+            youtube_link: https://www.youtube.com/watch?v=37StRy0LEbI
+      - name: Bigflo & Oli
+        songs:
+          - title: Bienvenue chez moi
+            youtube_link: https://www.youtube.com/watch?v=PTJLmBfG8yc
+      - name: Eminem
+        songs:
+          - title: Lose Yourself
+            youtube_link: https://www.youtube.com/watch?v=xFYQQPAOz7Y
+      - name: Tom MacDonalds
+        songs:
+          - title: Fake Woke
+            youtube_link: https://www.youtube.com/watch?v=2l6JUNFAJ9o
+
+
+
+
+
+#################################################################################
+#################################################################################
+####                                  AUTRES                                 ####
+#################################################################################
+#################################################################################
   - genre: Autres
     artists:
       - name: Zayde Wolf
